[b]Version 0.6.3[/b]:

(2008-08-25)
 * Added the Arabic translation, by Muhammad Nour Hajj Omar 
   <arabianheart@live.com>
 * Added some options in menu Play->Speed to increase/decrease the
   speed by 1% and 4%.
 * Bugfix: the gamma was not remembered. Fixes bug #2073257.
 * Moved the log's section in Preferences->Advanced to a new tab.

(2008-08-24)
 * Fix: some of the actions passed to -actions may not work as expected
   because they might be executed when the video is not playing yet.
   This should now be fixed, as if a file is passed on command line, the
   actions are not run until the video has started to play. (If there's no
   file on command line the actions are run immediately)

(2008-08-21)
 * Added a new option in Preferences->General->Audio: "Enable the audio
   equalizer". If this option is checked, the mplayer equalizer filter will
   be used and the menu option Audio->Equalizer will be enabled.

(2008-08-20)
 * Moved the eq2 filter before the screenshot filter, otherwise the 
   screenshots are not affected by the settings in the video equalizer.
   Obviously this requires the software equalizer (eq2) to be enabled.
   This should fix bug #2062425.
 * Added a new section in the config file: [floating_control] with 3
   options: animated, width and margin. The options "animated" and "width"
   were previously available as floating_control_animated and 
   floating_control_width in the [default_gui] and [mini_gui] sections.
   The option "margin" is new, and sets the number of pixels that the
   floating control will be away from the border of the screen (by default, 0).

(2008-08-19)
 * Added two new functions for the mouse buttons: increase volume and 
   decrease volume. Closes feature request #2055061.

(2008-08-18)
 * Renamed Video->Aspect ratio->None to Video->Aspect ratio->Disabled and
   Video->Aspect ratio->Autodetect to Video->Aspect ratio->Auto.

(2008-08-17)
 * Added a new (experimental) option: Video->Aspect ratio->None. When this 